# fii-labs

./: pyproject.toml
dlnlp/lab02/: readme.md  solution.py
dlnlp/lab03/: corpus.txt  solution_1.py  solution_3.py  solution_4.py
dlnlp/lab04/: context.txt  solution.py
dlnlp/lab05/: solution.py
dlnlp/lab06/: solution.py
fmse/lab07/: .gitignore  course.dfy  solution.dfy
fmse/lab09/: solution.maude
fmse/lab11/: solution.lean
